NDS-337 Update Tag package.json

--- a/components/nds-tag/package.json
+++ b/components/nds-tag/package.json
@@ -8,16 +8,13 @@
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
-	"main": "lib/Tag.js",
-	"module": "es/Tag.js",
-	"types": "nds-tag.d.ts",
+	"main": "es/Tag.js",
 	"style": "scss/tag.scss",
 	"directories": {
-		"lib": "lib",
+		"lib": "es",
 		"test": "__tests__"
 	},
 	"files": [
-		"lib",
 		"es",
 		"scss",
 		"*.d.ts"
@@ -35,8 +32,7 @@
 	},
 	"dependencies": {
 		"@nice-digital/nds-core": "^3.0.2",
-		"classnames": "^2.2.6",
-		"prop-types": "^15.7.2"
+		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
 		"react": "^16 || ^17 || ^18",
