--- a/components/nds-phase-banner/package.json
+++ b/components/nds-phase-banner/package.json
@@ -9,16 +9,13 @@
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
-	"main": "lib/PhaseBanner.js",
-	"module": "es/PhaseBanner.js",
+	"main": "es/PhaseBanner.js",
 	"style": "scss/phase-banner.scss",
-	"types": "nds-phase-banner.d.ts",
 	"directories": {
-		"lib": "lib",
+		"lib": "es",
 		"test": "__tests__"
 	},
 	"files": [
-		"lib",
 		"es",
 		"scss",
 		"*.d.ts"
@@ -40,8 +37,7 @@
 	"dependencies": {
 		"@nice-digital/nds-core": "^3.0.2",
 		"@nice-digital/nds-tag": "^3.0.2",
-		"classnames": "^2.3.1",
-		"prop-types": "^15.7.2"
+		"classnames": "^2.3.1"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.5.0",
