--- a/components/nds-table/package.json
+++ b/components/nds-table/package.json
@@ -5,16 +5,13 @@
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk",
 	"license": "MIT",
-	"main": "lib/Table.js",
-	"module": "es/Table.js",
+	"main": "es/Table.js",
 	"style": "scss/table.scss",
-	"types": "nds-table.d.ts",
 	"directories": {
-		"lib": "lib",
+		"lib": "es",
 		"test": "__tests__"
 	},
 	"files": [
-		"lib",
 		"es",
 		"scss",
 		"*.d.ts"
@@ -35,8 +32,7 @@
 	},
 	"dependencies": {
 		"@nice-digital/nds-core": "^3.0.2",
-		"classnames": "^2.3.1",
-		"prop-types": "^15.7.2"
+		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
 		"react": "^16 || ^17 || ^18",
