--- a/components/nds-core/package.json
+++ b/components/nds-core/package.json
@@ -9,15 +9,12 @@
 	],
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
-	"main": "lib/core.js",
-	"module": "es/core.js",
+	"main": "es/core.js",
 	"style": "scss/core.scss",
 	"directories": {
-		"lib": "lib",
-		"test": "__tests__"
+		"lib": "es"
 	},
 	"files": [
-		"lib",
 		"es",
 		"scss"
 	],
@@ -34,7 +31,6 @@
 	},
 	"dependencies": {
 		"@nice-digital/icons": "^5.0.2",
-		"prop-types": "^15.7.2",
 		"sass-mq": "^6.0.0"
 	},
 	"peerDependencies": {
