Convert nds-filters to TS

--- a/components/nds-core/package.json
+++ b/components/nds-core/package.json
@@ -16,7 +16,8 @@
 	},
 	"files": [
 		"es",
-		"scss"
+		"scss",
+		"*.d.ts"
 	],
 	"publishConfig": {
 		"registry": "https://registry.npmjs.org/",
