--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,14 +16,18 @@
 	"references": [
 		// Order is important here - if any module relies on any other, list the dependency first
 		// e.g. nds-tag is used by nds-phase-banner, so it needs to appear before it in this list
+		// Also, race conditions can occur - nds-input is a dependency of nds-filters and even though
+		// it appears before it, we've had to move nds-filters to the end so that there's enough time
+		// to generate the libraries. Bit messy and inelegant but there you go.
 		{ "path": "./components/nds-core" },
+		{ "path": "./components/nds-button" },
+		{ "path": "./components/nds-input" },
 		{ "path": "./components/nds-tag" },
 		{ "path": "./components/nds-a-z-list" },
 		{ "path": "./components/nds-action-banner" },
 		{ "path": "./components/nds-alert" },
 		{ "path": "./components/nds-alphabet" },
 		{ "path": "./components/nds-breadcrumbs" },
-		{ "path": "./components/nds-button" },
 		{ "path": "./components/nds-checkbox" },
 		{ "path": "./components/nds-column-list" },
 		{ "path": "./components/nds-container" },
@@ -32,13 +36,13 @@
 		{ "path": "./components/nds-grid" },
 		{ "path": "./components/nds-hero" },
 		{ "path": "./components/nds-horizontal-nav" },
-		{ "path": "./components/nds-input" },
 		{ "path": "./components/nds-maintain-ratio" },
 		{ "path": "./components/nds-page-header" },
 		{ "path": "./components/nds-phase-banner" },
 		{ "path": "./components/nds-radio" },
 		{ "path": "./components/nds-stacked-nav" },
 		{ "path": "./components/nds-table" },
-		{ "path": "./components/nds-textarea" }
+		{ "path": "./components/nds-textarea" },
+		{ "path": "./components/nds-filters" }
 	]
 }
