--- a/components/nds-filters/package.json
+++ b/components/nds-filters/package.json
@@ -5,16 +5,12 @@
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
-	"types": "nds-filters.d.ts",
-	"main": "lib/Filters.js",
-	"module": "es/Filters.js",
+	"main": "es/Filters.js",
 	"style": "scss/filters.scss",
 	"directories": {
-		"lib": "lib",
-		"test": "__tests__"
+		"lib": "es"
 	},
 	"files": [
-		"lib",
 		"es",
 		"scss",
 		"*.d.ts"
@@ -36,8 +32,7 @@
 		"@nice-digital/nds-core": "^3.0.2",
 		"@nice-digital/nds-input": "^3.0.2",
 		"@nice-digital/nds-tag": "^3.0.2",
-		"classnames": "^2.3.1",
-		"prop-types": "^15.7.2"
+		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
 		"react": "^16 || ^17 || ^18",
