NDS-337 port nds-panel to TS

--- a/components/nds-panel/package.json
+++ b/components/nds-panel/package.json
@@ -8,16 +8,12 @@
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
-	"main": "lib/Panel.js",
-	"module": "es/Panel.js",
+	"main": "es/Panel.js",
 	"style": "scss/panel.scss",
-	"types": "nds-panel.d.ts",
 	"directories": {
-		"lib": "lib",
-		"test": "__tests__"
+		"lib": "es"
 	},
 	"files": [
-		"lib",
 		"es",
 		"scss",
 		"*.d.ts"
@@ -42,8 +38,7 @@
 	},
 	"dependencies": {
 		"@nice-digital/nds-core": "^3.0.2",
-		"classnames": "^2.2.6",
-		"prop-types": "^15.7.2"
+		"classnames": "^2.2.6"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.5.0",
