--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,7 @@
 		{ "path": "./components/nds-horizontal-nav" },
 		{ "path": "./components/nds-maintain-ratio" },
 		{ "path": "./components/nds-page-header" },
+		{ "path": "./components/nds-panel" },
 		{ "path": "./components/nds-phase-banner" },
 		{ "path": "./components/nds-radio" },
 		{ "path": "./components/nds-stacked-nav" },
