--- a/components/nds-phase-banner/package.json
+++ b/components/nds-phase-banner/package.json
@@ -12,8 +12,7 @@
 	"main": "es/PhaseBanner.js",
 	"style": "scss/phase-banner.scss",
 	"directories": {
-		"lib": "es",
-		"test": "__tests__"
+		"lib": "es"
 	},
 	"files": [
 		"es",
