--- a/components/nds-prev-next/package.json
+++ b/components/nds-prev-next/package.json
@@ -9,16 +9,12 @@
 	],
 	"homepage": "https://github.com/nice-digital/nice-design-system#readme",
 	"license": "MIT",
-	"types": "nds-prev-next.d.ts",
-	"main": "lib/PrevNext.js",
-	"module": "es/PrevNext.js",
+	"main": "es/PrevNext.js",
 	"style": "scss/prev-next.scss",
 	"directories": {
-		"lib": "lib",
-		"test": "__tests__"
+		"lib": "es"
 	},
 	"files": [
-		"lib",
 		"es",
 		"scss",
 		"*.d.ts"
@@ -39,8 +35,7 @@
 	},
 	"dependencies": {
 		"@nice-digital/nds-core": "^3.0.2",
-		"classnames": "^2.2.6",
-		"prop-types": "^15.7.2"
+		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
 		"react": "^16 || ^17 || ^18",
