--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
 		{ "path": "./components/nds-container" },
 		{ "path": "./components/nds-enhanced-pagination" },
 		{ "path": "./components/nds-form-group" },
+		{ "path": "./components/nds-full-bleed" },
 		{ "path": "./components/nds-grid" },
 		{ "path": "./components/nds-hero" },
 		{ "path": "./components/nds-horizontal-nav" },
