NDS-337 Port in-page-nav to TS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,7 @@
 		{ "path": "./components/nds-grid" },
 		{ "path": "./components/nds-hero" },
 		{ "path": "./components/nds-horizontal-nav" },
+		{ "path": "./components/nds-in-page-nav" },
 		{ "path": "./components/nds-maintain-ratio" },
 		{ "path": "./components/nds-page-header" },
 		{ "path": "./components/nds-panel" },
