--- a/components/nds-in-page-nav/package.json
+++ b/components/nds-in-page-nav/package.json
@@ -5,16 +5,12 @@
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
-	"main": "lib/InPageNav.js",
-	"module": "es/InPageNav.js",
+	"main": "es/InPageNav.js",
 	"style": "scss/in-page-nav.scss",
-	"types": "in-page-nav.d.ts",
 	"directories": {
-		"lib": "lib",
-		"test": "__tests__"
+		"lib": "es"
 	},
 	"files": [
-		"lib",
 		"es",
 		"scss",
 		"*.d.ts"
@@ -36,7 +32,6 @@
 	"dependencies": {
 		"@nice-digital/nds-core": "^3.0.2",
 		"lodash.throttle": "^4.1.1",
-		"prop-types": "^15.7.2",
 		"slugify": "1.4.7"
 	},
 	"peerDependencies": {
@@ -49,6 +44,7 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.2.2",
+		"@types/lodash.throttle": "^4.1.7",
 		"@types/node": "^18.11.9",
 		"typescript": "^4.8.4"
 	},
