--- a/components/nds-a-z-list/package.json
+++ b/components/nds-a-z-list/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "@nice-digital/nds-a-z-list",
-  "version": "3.0.2",
-  "description": "A to Z list component for the NICE Design System",
-  "main": "es/AZList.js",
-  "style": "scss/a-z-list.js",
-  "files": [
-    "es",
-    "scss",
-    "*.d.ts"
-  ],
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nice-digital/nice-design-system.git"
-  },
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
-  },
-  "bugs": {
-    "url": "https://github.com/nice-digital/nice-design-system/issues"
-  },
-  "keywords": [
-    "a to z",
-    "list"
-  ],
-  "author": "Chris Barker <chris.barker@nice.org.uk>",
-  "homepage": "https://design-system.nice.org.uk/",
-  "license": "MIT",
-  "dependencies": {
-    "@nice-digital/nds-core": "^3.0.2"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.2",
-    "@types/node": "^18.11.9",
-    "typescript": "^4.8.4"
-  }
+	"name": "@nice-digital/nds-a-z-list",
+	"version": "4.0.0-alpha.0",
+	"description": "A to Z list component for the NICE Design System",
+	"main": "es/AZList.js",
+	"style": "scss/a-z-list.js",
+	"files": [
+		"es",
+		"scss",
+		"*.d.ts"
+	],
+	"publishConfig": {
+		"registry": "https://registry.npmjs.org/",
+		"access": "public"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/nice-digital/nice-design-system.git"
+	},
+	"scripts": {
+		"test": "echo \"Error: run tests from root\" && exit 1"
+	},
+	"bugs": {
+		"url": "https://github.com/nice-digital/nice-design-system/issues"
+	},
+	"keywords": [
+		"a to z",
+		"list"
+	],
+	"author": "Chris Barker <chris.barker@nice.org.uk>",
+	"homepage": "https://design-system.nice.org.uk/",
+	"license": "MIT",
+	"dependencies": {
+		"@nice-digital/nds-core": "^4.0.0-alpha.0"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^14.4.3",
+		"@types/jest": "^29.2.2",
+		"@types/node": "^18.11.9",
+		"typescript": "^4.8.4"
+	}
 }
