--- a/components/nds-action-banner/package.json
+++ b/components/nds-action-banner/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-action-banner",
-	"version": "3.0.2",
+	"version": "4.0.0-alpha.0",
 	"description": "Action banner component for the NICE Design System",
 	"keywords": [
 		"banner"
@@ -30,8 +30,8 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/icons": "^5.0.2",
-		"@nice-digital/nds-core": "^3.0.2",
+		"@nice-digital/icons": "^6.0.0-alpha.0",
+		"@nice-digital/nds-core": "^4.0.0-alpha.0",
 		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
