--- a/components/nds-full-bleed/package.json
+++ b/components/nds-full-bleed/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-full-bleed",
-	"version": "3.0.2",
+	"version": "4.0.0-alpha.0",
 	"description": "Full bleed (edge-to-edge) component for the NICE Design System",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk",
@@ -30,7 +30,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^3.0.2",
+		"@nice-digital/nds-core": "^4.0.0-alpha.0",
 		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
