--- a/components/nds-page-header/package.json
+++ b/components/nds-page-header/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-page-header",
-	"version": "3.0.2",
+	"version": "4.0.0-alpha.0",
 	"description": "Page header component for the NICE Design System",
 	"keywords": [
 		"header"
@@ -34,7 +34,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^3.0.2"
+		"@nice-digital/nds-core": "^4.0.0-alpha.0"
 	},
 	"peerDependencies": {
 		"react": "^16 || ^17 || ^18",
