--- a/docs/package.json
+++ b/docs/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "@nice-digital/design-system-docs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@code-hike/mdx": "^0.7.4",
-    "@mdx-js/loader": "^2.1.5",
-    "@mdx-js/react": "^2.1.5",
-    "@next/mdx": "^13.0.1",
-    "@nice-digital/design-system": "^4.0.4",
-    "@nice-digital/global-nav": "^5.0.916",
-    "glob": "^8.0.3",
-    "next": "13.0.0",
-    "next-transpile-modules": "^9.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.2",
-    "@types/node": "^18.11.9",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.8",
-    "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0",
-    "sass": "^1.55.0",
-    "typescript": "4.8.4"
-  }
+	"name": "@nice-digital/design-system-docs",
+	"version": "1.0.0-alpha.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build && next export",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@code-hike/mdx": "^0.7.4",
+		"@mdx-js/loader": "^2.1.5",
+		"@mdx-js/react": "^2.1.5",
+		"@next/mdx": "^13.0.1",
+		"@nice-digital/design-system": "^5.0.0-alpha.0",
+		"@nice-digital/global-nav": "^5.0.916",
+		"glob": "^8.0.3",
+		"next": "13.0.0",
+		"next-transpile-modules": "^9.1.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/user-event": "^14.4.3",
+		"@types/jest": "^29.2.2",
+		"@types/node": "^18.11.9",
+		"@types/react": "18.0.24",
+		"@types/react-dom": "18.0.8",
+		"eslint": "8.26.0",
+		"eslint-config-next": "13.0.0",
+		"sass": "^1.55.0",
+		"typescript": "4.8.4"
+	}
 }
