--- a/components/nds-column-list/package.json
+++ b/components/nds-column-list/package.json
@@ -2,12 +2,9 @@
 	"name": "@nice-digital/nds-column-list",
 	"version": "4.0.0-alpha.0",
 	"description": "Column List component for the NICE Design System",
-	"main": "lib/ColumnList.js",
-	"module": "es/ColumnList.js",
+	"main": "es/ColumnList.js",
 	"style": "scss/column-list.js",
-	"types": "nds-column-list.d.ts",
 	"files": [
-		"lib",
 		"es",
 		"scss",
 		"*.d.ts"
@@ -34,8 +31,7 @@
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.0-alpha.0",
-		"prop-types": "^15.8.1"
+		"@nice-digital/nds-core": "^4.0.0-alpha.0"
 	},
 	"gitHead": "e33b39c96bdba7d3c4bf1e74d4101395ccd4f6e6",
 	"devDependencies": {
