--- a/components/nds-a-z-list/package.json
+++ b/components/nds-a-z-list/package.json
@@ -36,5 +36,6 @@
 	"dependencies": {
 		"@nice-digital/nds-core": "^3.0.3",
 		"prop-types": "^15.8.1"
-	}
+	},
+	"gitHead": "8a7d7925546f9ab473cf88904d938f018ec0fd1f"
 }
