NDS-352 Update primary button colour (#305)
* NDS-352 Update primary button colour

* Publish

 - @nice-digital/design-system@4.0.6
 - @nice-digital/nds-a-z-list@3.0.3
 - @nice-digital/nds-action-banner@3.0.3
 - @nice-digital/nds-alert@3.0.3
 - @nice-digital/nds-alphabet@2.0.3
 - @nice-digital/nds-breadcrumbs@3.0.3
 - @nice-digital/nds-button@3.0.3
 - @nice-digital/nds-callout@3.0.3
 - @nice-digital/nds-card@3.0.3
 - @nice-digital/nds-checkbox@3.0.3
 - @nice-digital/nds-column-list@3.0.3
 - @nice-digital/nds-container@3.0.3
 - @nice-digital/nds-core@3.0.3
 - @nice-digital/nds-enhanced-pagination@3.0.3
 - @nice-digital/nds-filters@4.0.3
 - @nice-digital/nds-form-group@3.0.3
 - @nice-digital/nds-forms@3.0.3
 - @nice-digital/nds-full-bleed@3.0.3
 - @nice-digital/nds-grid@3.0.4
 - @nice-digital/nds-hero@3.0.3
 - @nice-digital/nds-horizontal-nav@3.0.4
 - @nice-digital/nds-in-page-nav@3.0.3
 - @nice-digital/nds-input@3.0.3
 - @nice-digital/nds-maintain-ratio@3.0.3
 - @nice-digital/nds-page-header@3.0.3
 - @nice-digital/nds-panel@3.0.3
 - @nice-digital/nds-phase-banner@3.0.3
 - @nice-digital/nds-prev-next@3.0.3
 - @nice-digital/nds-radio@3.0.3
 - @nice-digital/nds-simple-pagination@3.0.3
 - @nice-digital/nds-stacked-nav@3.0.3
 - @nice-digital/nds-table@3.0.3
 - @nice-digital/nds-tabs@3.0.3
 - @nice-digital/nds-tag@3.0.3
 - @nice-digital/nds-textarea@3.0.3
 - dev-app@3.0.6
 - @nice-digital/design-system-documentation@3.0.6
 - storybook@3.0.6

* NDS-352 Update githeads

---------

Co-authored-by: Chris Barker <chris.barker@nice.org.uk>

--- a/components/nds-a-z-list/package.json
+++ b/components/nds-a-z-list/package.json
@@ -1,40 +1,41 @@
 {
-  "name": "@nice-digital/nds-a-z-list",
-  "version": "3.0.2",
-  "description": "A to Z list component for the NICE Design System",
-  "main": "lib/AZList.js",
-  "module": "es/AZList.js",
-  "style": "scss/a-z-list.js",
-  "types": "nds-a-z-list.d.ts",
-  "files": [
-    "lib",
-    "es",
-    "scss",
-    "*.d.ts"
-  ],
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nice-digital/nice-design-system.git"
-  },
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
-  },
-  "bugs": {
-    "url": "https://github.com/nice-digital/nice-design-system/issues"
-  },
-  "keywords": [
-    "a to z",
-    "list"
-  ],
-  "author": "Chris Barker <chris.barker@nice.org.uk>",
-  "homepage": "https://design-system.nice.org.uk/",
-  "license": "MIT",
-  "dependencies": {
-    "@nice-digital/nds-core": "^3.0.2",
-    "prop-types": "^15.8.1"
-  }
+	"name": "@nice-digital/nds-a-z-list",
+	"version": "3.0.3",
+	"description": "A to Z list component for the NICE Design System",
+	"main": "lib/AZList.js",
+	"module": "es/AZList.js",
+	"style": "scss/a-z-list.js",
+	"types": "nds-a-z-list.d.ts",
+	"files": [
+		"lib",
+		"es",
+		"scss",
+		"*.d.ts"
+	],
+	"publishConfig": {
+		"registry": "https://registry.npmjs.org/",
+		"access": "public"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/nice-digital/nice-design-system.git"
+	},
+	"scripts": {
+		"test": "echo \"Error: run tests from root\" && exit 1"
+	},
+	"bugs": {
+		"url": "https://github.com/nice-digital/nice-design-system/issues"
+	},
+	"keywords": [
+		"a to z",
+		"list"
+	],
+	"author": "Chris Barker <chris.barker@nice.org.uk>",
+	"homepage": "https://design-system.nice.org.uk/",
+	"license": "MIT",
+	"dependencies": {
+		"@nice-digital/nds-core": "^3.0.3",
+		"prop-types": "^15.8.1"
+	},
+	"gitHead": "8a7d7925546f9ab473cf88904d938f018ec0fd1f"
 }
