--- a/components/nds-alphabet/package.json
+++ b/components/nds-alphabet/package.json
@@ -1,40 +1,41 @@
 {
-  "name": "@nice-digital/nds-alphabet",
-  "version": "2.0.2",
-  "description": "Alphabet component for the NICE Design System",
-  "main": "lib/Alphabet.js",
-  "module": "es/Alphabet.js",
-  "style": "scss/alphabet.js",
-  "types": "nds-alphabet.d.ts",
-  "files": [
-    "lib",
-    "es",
-    "scss",
-    "*.d.ts"
-  ],
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nice-digital/nice-design-system.git"
-  },
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
-  },
-  "bugs": {
-    "url": "https://github.com/nice-digital/nice-design-system/issues"
-  },
-  "keywords": [
-    "alphabet",
-    "a to z"
-  ],
-  "author": "Chris Barker <chris.barker@nice.org.uk>",
-  "homepage": "https://design-system.nice.org.uk/",
-  "license": "MIT",
-  "dependencies": {
-    "@nice-digital/nds-core": "^3.0.2",
-    "prop-types": "^15.8.1"
-  }
+	"name": "@nice-digital/nds-alphabet",
+	"version": "2.0.3",
+	"description": "Alphabet component for the NICE Design System",
+	"main": "lib/Alphabet.js",
+	"module": "es/Alphabet.js",
+	"style": "scss/alphabet.js",
+	"types": "nds-alphabet.d.ts",
+	"files": [
+		"lib",
+		"es",
+		"scss",
+		"*.d.ts"
+	],
+	"publishConfig": {
+		"registry": "https://registry.npmjs.org/",
+		"access": "public"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/nice-digital/nice-design-system.git"
+	},
+	"scripts": {
+		"test": "echo \"Error: run tests from root\" && exit 1"
+	},
+	"bugs": {
+		"url": "https://github.com/nice-digital/nice-design-system/issues"
+	},
+	"keywords": [
+		"alphabet",
+		"a to z"
+	],
+	"author": "Chris Barker <chris.barker@nice.org.uk>",
+	"homepage": "https://design-system.nice.org.uk/",
+	"license": "MIT",
+	"dependencies": {
+		"@nice-digital/nds-core": "^3.0.3",
+		"prop-types": "^15.8.1"
+	},
+	"gitHead": "8a7d7925546f9ab473cf88904d938f018ec0fd1f"
 }
