--- a/package.json
+++ b/package.json
@@ -79,5 +79,8 @@
   "workspaces": [
     "./components/*",
     "./docs"
-  ]
+  ],
+  "dependencies": {
+    "@nice-digital/icons": "^6.0.0-alpha.0"
+  }
 }
