NDS-337 Replace missing next.js scripts

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "icons:esify": "npm run icons -- esify",
     "icons:webfont": "npm run icons -- webfont",
     "icons:readme": "npm run icons -- readme",
+    "// DOCUMENTATION": "",
+    "docs:dev": "lerna run --stream --no-prefix --scope=@nice-digital/design-system-docs dev",
+    "docs:build": "lerna run --stream --no-prefix --scope=@nice-digital/design-system-docs build",
     "// LERNA": "",
     "lerna": "lerna",
     "bootstrap": "lerna bootstrap",
