--- a/components/nds-action-banner/package.json
+++ b/components/nds-action-banner/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-action-banner",
-	"version": "4.0.2-alpha.0",
+	"version": "4.0.2",
 	"description": "Action banner component for the NICE Design System",
 	"keywords": [
 		"banner"
@@ -31,7 +31,7 @@
 	},
 	"dependencies": {
 		"@nice-digital/icons": "^6.0.0-alpha.0",
-		"@nice-digital/nds-core": "^4.0.2-alpha.0",
+		"@nice-digital/nds-core": "^4.0.2",
 		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
