--- a/components/nds-alphabet/package.json
+++ b/components/nds-alphabet/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-alphabet",
-	"version": "3.0.2-alpha.0",
+	"version": "3.0.2",
 	"description": "Alphabet component for the NICE Design System",
 	"main": "es/Alphabet.js",
 	"style": "scss/alphabet.js",
@@ -31,7 +31,7 @@
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.2-alpha.0"
+		"@nice-digital/nds-core": "^4.0.2"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
