--- a/components/nds-container/package.json
+++ b/components/nds-container/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-container",
-	"version": "4.0.2-alpha.0",
+	"version": "4.0.2",
 	"description": "Container component for the NICE Design System",
 	"keywords": [
 		"container"
@@ -33,7 +33,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.2-alpha.0",
+		"@nice-digital/nds-core": "^4.0.2",
 		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
