--- a/components/nds-filters/package.json
+++ b/components/nds-filters/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-filters",
-	"version": "5.0.4-alpha.0",
+	"version": "5.0.4",
 	"description": "Filter components for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -28,10 +28,10 @@
 	},
 	"dependencies": {
 		"@nice-digital/icons": "^6.0.0-alpha.0",
-		"@nice-digital/nds-button": "^4.0.4-alpha.0",
-		"@nice-digital/nds-core": "^4.0.2-alpha.0",
-		"@nice-digital/nds-input": "^4.0.2-alpha.0",
-		"@nice-digital/nds-tag": "^4.0.2-alpha.0",
+		"@nice-digital/nds-button": "^4.0.4",
+		"@nice-digital/nds-core": "^4.0.2",
+		"@nice-digital/nds-input": "^4.0.2",
+		"@nice-digital/nds-tag": "^4.0.2",
 		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
