--- a/components/nds-form-group/package.json
+++ b/components/nds-form-group/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-form-group",
-	"version": "4.0.2-alpha.0",
+	"version": "4.0.2",
 	"description": "Form group component for the NICE Design System",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://github.com/nice-digital/nice-design-system#readme",
@@ -38,7 +38,7 @@
 		"typescript": "^4.8.4"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.2-alpha.0",
+		"@nice-digital/nds-core": "^4.0.2",
 		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
