--- a/components/nds-phase-banner/package.json
+++ b/components/nds-phase-banner/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-phase-banner",
-	"version": "4.0.2-alpha.0",
+	"version": "4.0.2",
 	"description": "Phase banner component for the NICE Design System",
 	"keywords": [
 		"alpha",
@@ -34,8 +34,8 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.2-alpha.0",
-		"@nice-digital/nds-tag": "^4.0.2-alpha.0",
+		"@nice-digital/nds-core": "^4.0.2",
+		"@nice-digital/nds-tag": "^4.0.2",
 		"classnames": "^2.3.1"
 	},
 	"devDependencies": {
