--- a/components/nds-table/package.json
+++ b/components/nds-table/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-table",
-	"version": "4.0.2-alpha.0",
+	"version": "4.0.2",
 	"description": "Table component for the NICE Design System",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk",
@@ -31,7 +31,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.2-alpha.0",
+		"@nice-digital/nds-core": "^4.0.2",
 		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
