--- a/components/nds-tabs/package.json
+++ b/components/nds-tabs/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-tabs",
-	"version": "4.0.2-alpha.0",
+	"version": "4.0.2",
 	"description": "Tabs component for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -27,7 +27,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.2-alpha.0",
+		"@nice-digital/nds-core": "^4.0.2",
 		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
