--- a/components/nds-tag/package.json
+++ b/components/nds-tag/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-tag",
-	"version": "4.0.2-alpha.0",
+	"version": "4.0.2",
 	"description": "Tag component for the NICE Design System",
 	"keywords": [
 		"tag"
@@ -31,7 +31,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.2-alpha.0",
+		"@nice-digital/nds-core": "^4.0.2",
 		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
