--- a/components/nds-breadcrumbs/package.json
+++ b/components/nds-breadcrumbs/package.json
@@ -9,6 +9,7 @@
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
 	"main": "es/Breadcrumbs.js",
+	"types": "es/Breadcrumbs.d.ts",
 	"style": "scss/breadcrumbs.scss",
 	"directories": {
 		"lib": "es"
