--- a/components/nds-horizontal-nav/package.json
+++ b/components/nds-horizontal-nav/package.json
@@ -9,6 +9,7 @@
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
 	"main": "es/HorizontalNav.js",
+	"types": "es/HorizontalNav.d.ts",
 	"style": "scss/horizontal-nav.scss",
 	"directories": {
 		"lib": "es",
