--- a/components/nds-simple-pagination/package.json
+++ b/components/nds-simple-pagination/package.json
@@ -9,6 +9,7 @@
 	"homepage": "https://github.com/nice-digital/nice-design-system#readme",
 	"license": "MIT",
 	"main": "es/SimplePagination.js",
+	"types": "es/SimplePagination.d.ts",
 	"style": "scss/simple-pagination.scss",
 	"directories": {
 		"lib": "es"
