--- a/components/nds-a-z-list/package.json
+++ b/components/nds-a-z-list/package.json
@@ -3,6 +3,7 @@
 	"version": "4.0.3",
 	"description": "A to Z list component for the NICE Design System",
 	"main": "es/AZList.js",
+	"types": "es/AZList.d.s",
 	"style": "scss/a-z-list.js",
 	"files": [
 		"es",
