--- a/components/nds-full-bleed/package.json
+++ b/components/nds-full-bleed/package.json
@@ -6,6 +6,7 @@
 	"homepage": "https://design-system.nice.org.uk",
 	"license": "MIT",
 	"main": "es/FullBleed.js",
+	"types": "es/FullBleed.d.ts",
 	"style": "scss/full-bleed.scss",
 	"directories": {
 		"lib": "es"
