--- a/components/nds-stacked-nav/package.json
+++ b/components/nds-stacked-nav/package.json
@@ -9,6 +9,7 @@
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
 	"main": "es/StackedNav.js",
+	"types": "es/StackedNav.d.ts",
 	"style": "scss/stacked-nav.scss",
 	"directories": {
 		"lib": "es"
