--- a/components/nds-table/package.json
+++ b/components/nds-table/package.json
@@ -6,6 +6,7 @@
 	"homepage": "https://design-system.nice.org.uk",
 	"license": "MIT",
 	"main": "es/Table.js",
+	"types": "es/Table.d.ts",
 	"style": "scss/table.scss",
 	"directories": {
 		"lib": "es",
