NDS 383 missing exports (#311)
* NDS-383 add missing exports for next-web

* Publish

 - @nice-digital/design-system@5.0.6
 - @nice-digital/nds-card@4.0.4
 - @nice-digital/nds-filters@5.0.6
 - @nice-digital/design-system-docs@1.0.6

* NDS-383 Add missing type fields to package.json

* Publish

 - @nice-digital/design-system@5.0.7
 - @nice-digital/nds-a-z-list@4.0.4
 - @nice-digital/nds-action-banner@4.0.4
 - @nice-digital/nds-alert@4.0.4
 - @nice-digital/nds-alphabet@3.0.4
 - @nice-digital/nds-breadcrumbs@4.0.4
 - @nice-digital/nds-button@4.0.6
 - @nice-digital/nds-card@4.0.5
 - @nice-digital/nds-checkbox@4.0.4
 - @nice-digital/nds-column-list@4.0.4
 - @nice-digital/nds-container@4.0.4
 - @nice-digital/nds-core@4.0.4
 - @nice-digital/nds-enhanced-pagination@4.0.4
 - @nice-digital/nds-filters@5.0.7
 - @nice-digital/nds-form-group@4.0.4
 - @nice-digital/nds-full-bleed@4.0.4
 - @nice-digital/nds-grid@4.0.5
 - @nice-digital/nds-hero@4.0.4
 - @nice-digital/nds-horizontal-nav@4.0.4
 - @nice-digital/nds-in-page-nav@4.0.4
 - @nice-digital/nds-input@4.0.4
 - @nice-digital/nds-maintain-ratio@4.0.4
 - @nice-digital/nds-page-header@4.0.4
 - @nice-digital/nds-panel@4.0.4
 - @nice-digital/nds-phase-banner@4.0.4
 - @nice-digital/nds-prev-next@4.0.4
 - @nice-digital/nds-radio@4.0.4
 - @nice-digital/nds-simple-pagination@4.0.4
 - @nice-digital/nds-stacked-nav@4.0.4
 - @nice-digital/nds-table@4.0.4
 - @nice-digital/nds-tabs@4.0.4
 - @nice-digital/nds-tag@4.0.4
 - @nice-digital/nds-textarea@4.0.4
 - @nice-digital/design-system-docs@1.0.7

* NDS-383 Restore missing Filter Summary default props and tests

* Publish

 - @nice-digital/design-system@5.0.8
 - @nice-digital/nds-filters@5.0.8
 - @nice-digital/design-system-docs@1.0.8

* NDS-383 Trivial change to force publish

* Publish

 - @nice-digital/design-system@5.0.9
 - @nice-digital/nds-filters@5.0.9
 - @nice-digital/design-system-docs@1.0.9

* NDS-383 Update typo in A-Zl

--- a/components/nds-maintain-ratio/package.json
+++ b/components/nds-maintain-ratio/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "@nice-digital/nds-maintain-ratio",
-	"version": "4.0.3",
+	"version": "4.0.4",
 	"description": "Maintain ratio component for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
 	"main": "es/MaintainRatio.js",
+	"types": "es/MaintainRatio.d.ts",
 	"style": "scss/maintain-ratio.scss",
 	"directories": {
 		"lib": "es",
@@ -31,7 +32,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.3",
+		"@nice-digital/nds-core": "^4.0.4",
 		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
