--- a/components/nds-a-z-list/package.json
+++ b/components/nds-a-z-list/package.json
@@ -1,8 +1,9 @@
 {
 	"name": "@nice-digital/nds-a-z-list",
-	"version": "4.0.3",
+	"version": "4.0.5",
 	"description": "A to Z list component for the NICE Design System",
 	"main": "es/AZList.js",
+	"types": "es/AZList.d.ts",
 	"style": "scss/a-z-list.js",
 	"files": [
 		"es",
@@ -31,7 +32,7 @@
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.3"
+		"@nice-digital/nds-core": "^4.0.4"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
