--- a/components/nds-action-banner/package.json
+++ b/components/nds-action-banner/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-action-banner",
-	"version": "4.0.3",
+	"version": "4.0.4",
 	"description": "Action banner component for the NICE Design System",
 	"keywords": [
 		"banner"
@@ -9,6 +9,7 @@
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
 	"main": "es/ActionBanner.js",
+	"types": "es/ActionBanner.d.ts",
 	"style": "scss/action-banner.scss",
 	"directories": {
 		"lib": "es"
@@ -31,7 +32,7 @@
 	},
 	"dependencies": {
 		"@nice-digital/icons": "^6.0.0",
-		"@nice-digital/nds-core": "^4.0.3",
+		"@nice-digital/nds-core": "^4.0.4",
 		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
