--- a/components/nds-alert/package.json
+++ b/components/nds-alert/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-alert",
-	"version": "4.0.3",
+	"version": "4.0.4",
 	"description": "Alert component for the NICE Design System",
 	"keywords": [
 		"alert"
@@ -9,6 +9,7 @@
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
 	"main": "es/Alert.js",
+	"types": "es/Alert.d.ts",
 	"style": "scss/alert.scss",
 	"directories": {
 		"test": "__tests__"
@@ -30,7 +31,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.3",
+		"@nice-digital/nds-core": "^4.0.4",
 		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
