--- a/components/nds-alphabet/package.json
+++ b/components/nds-alphabet/package.json
@@ -1,8 +1,9 @@
 {
 	"name": "@nice-digital/nds-alphabet",
-	"version": "3.0.3",
+	"version": "3.0.4",
 	"description": "Alphabet component for the NICE Design System",
 	"main": "es/Alphabet.js",
+	"types": "es/Alphabet.d.ts",
 	"style": "scss/alphabet.js",
 	"files": [
 		"es",
@@ -31,7 +32,7 @@
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.3"
+		"@nice-digital/nds-core": "^4.0.4"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
