--- a/components/nds-grid/package.json
+++ b/components/nds-grid/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-grid",
-	"version": "4.0.4",
+	"version": "4.0.5",
 	"description": "Grid component for the NICE Design System",
 	"keywords": [
 		"grid"
@@ -9,6 +9,7 @@
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
 	"main": "es/Grid.js",
+	"types": "es/Grid.d.ts",
 	"style": "scss/grid.scss",
 	"directories": {
 		"lib": "es"
@@ -33,7 +34,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.3",
+		"@nice-digital/nds-core": "^4.0.4",
 		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
