--- a/components/nds-radio/package.json
+++ b/components/nds-radio/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "@nice-digital/nds-radio",
-	"version": "4.0.3",
+	"version": "4.0.4",
 	"description": "Radio button component for the NICE Design System",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://github.com/nice-digital/nice-design-system#readme",
 	"license": "MIT",
 	"main": "es/Radio.js",
+	"types": "es/Radio.d.ts",
 	"scss": "scss/radio.scss",
 	"directories": {
 		"lib": "es"
@@ -35,7 +36,7 @@
 		"typescript": "^4.8.4"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.3",
+		"@nice-digital/nds-core": "^4.0.4",
 		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
