--- a/components/nds-simple-pagination/package.json
+++ b/components/nds-simple-pagination/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-simple-pagination",
-	"version": "4.0.3",
+	"version": "4.0.4",
 	"description": "Simple pagination component for the NICE Design System",
 	"author": "Warren Keith <w@rren.dev>",
 	"keywords": [
@@ -9,6 +9,7 @@
 	"homepage": "https://github.com/nice-digital/nice-design-system#readme",
 	"license": "MIT",
 	"main": "es/SimplePagination.js",
+	"types": "es/SimplePagination.d.ts",
 	"style": "scss/simple-pagination.scss",
 	"directories": {
 		"lib": "es"
@@ -33,7 +34,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.3",
+		"@nice-digital/nds-core": "^4.0.4",
 		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
