--- a/components/nds-tabs/package.json
+++ b/components/nds-tabs/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "@nice-digital/nds-tabs",
-	"version": "4.0.3",
+	"version": "4.0.4",
 	"description": "Tabs component for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
 	"main": "es/Tabs.js",
+	"types": "es/Tabs.d.ts",
 	"style": "scss/tabs.scss",
 	"directories": {
 		"lib": "es"
@@ -27,7 +28,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.3",
+		"@nice-digital/nds-core": "^4.0.4",
 		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
