--- a/components/nds-filters/package.json
+++ b/components/nds-filters/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-filters",
-	"version": "5.0.12-alpha.0",
+	"version": "5.0.12",
 	"description": "Filter components for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -29,10 +29,10 @@
 	},
 	"dependencies": {
 		"@nice-digital/icons": "^6.0.1",
-		"@nice-digital/nds-button": "^4.0.9-alpha.0",
-		"@nice-digital/nds-core": "^4.0.7-alpha.0",
-		"@nice-digital/nds-input": "^4.0.7-alpha.0",
-		"@nice-digital/nds-tag": "^4.0.7-alpha.0",
+		"@nice-digital/nds-button": "^4.0.9",
+		"@nice-digital/nds-core": "^4.0.7",
+		"@nice-digital/nds-input": "^4.0.7",
+		"@nice-digital/nds-tag": "^4.0.7",
 		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
